--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -2,8 +2,7 @@ name: CI/CD
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   build:
@@ -21,11 +20,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install bandit
+          pip install flask flasgger pyyaml bandit
 
       - name: Run Bandit
-        run: bandit -r . -ll
+        run: |
+          bandit -r . -f html -o bandit_report.html || true
 
       - name: Generate OpenAPI YAML
         run: python generate_openapi.py
